移除viaversion判断